--- a/newcode-v2.yml
+++ b/newcode-v2.yml
@@ -1,1 +1,50 @@
+trigger:
+- master
 
+pool:
+  vmImage: 'windows-latest'
+
+variables:
+  solution: '**/*.sln'
+  buildPlatform: 'x86'
+  buildConfiguration: 'Release'
+  msixInstallUrl: https://wugdaysdemoapp.azurewebsites.net
+  packageVersion: 1.0.0
+  packageName: 'WUG Days Demo App'
+
+jobs: 
+- job: BuildMSIX
+  strategy: 
+    matrix: 
+      Preview:
+        channelName: 'preview'
+        packageIdSuffix: '-preview'
+        packageNameSuffix: ' [PREVIEW]'
+      Production:
+        channelName: 'production'
+        packageIdSuffix: ''
+        packageNameSuffix: ''
+  steps:
+  - task: PowerShell@2
+    inputs:
+      targetType: 'inline'
+      script: |
+        [xml]$manifest= get-content ".\src\WpfCoreDemo.Package\Package.appxmanifest"
+        $manifest.Package.Identity.Version = "$(packageVersion).$(Build.BuildId)"
+        $manifest.Package.Identity.Name = "demo-864d9095-955f-4d3c-adb0-6574a5acb88b$(packageIdSuffix)"
+        $manifest.Package.Properties.DisplayName = "$(packageName)$(packageNameSuffix)"
+        $manifest.Package.Applications.Application.VisualElements.DisplayName = "$(packageName)$(packageNameSuffix)"
+        $manifest.save(".\src\WpfCoreDemo.Package\Package.appxmanifest")
+
+  - task: VSBuild@1
+    inputs:
+      solution: '$(solution)'
+      msbuildArgs: '/restore /p:AppInstallerUri=$(msixInstallUrl)/$(channelName) /p:AppxPackageDir="$(Build.ArtifactStagingDirectory)/$(channelName)" /p:UapAppxPackageBuildMode=SideLoadOnly /p:GenerateAppInstallerFile=true'
+      platform: '$(buildPlatform)'
+      configuration: '$(buildConfiguration)'
+
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'drop'
+      publishLocation: 'Container'
